<resources>
    <string name="app_name">Resa</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="autName">سامانه اطلاع رسانی دانشگاه صنعتی امیرکبیر</string>
    <string name="resaName">سامانه رسا</string>
    <string name="loginToResa">ورود به سامانه رسا</string>
    <string name="login">ورود</string>
    <string name="username">نام کاربری</string>
    <string name="username_hint">برای مثال شماره دانشجویی</string>
    <string name="password">رمز عبور</string>
    <string name="password_hint">رمز عبور پورتال آموزشی</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="default_text">مقدار پیش فرض</string>
    <string name="profile">پروفایل</string>
    <string name="settings">تغییر رمز عبور</string>
    <string name="logout">خروج</string>
    <string name="add_board">اضافه کردن برد</string>
    <string name="admin_control">تنظیمات ادمین</string>
    <string name="no_boards">بردی برای نمایش وجود ندارد</string>
    <string name="no_members">در حال حاضر این برد کاربری ندارد!</string>
    <string name="type_announcement_hint">متن پیام</string>

    <string name="board_id">شناسه برد</string>
    <string name="board_title">عنوان برد</string>
    <string name="board_creator">بانی برد</string>
    <string name="board_category">دسته بندی برد</string>
    <string name="board_faculty">دانشکده</string>
    <string name="board_info">اطلاعات برد</string>


    <string name="board_id_hint">برای مثال: board_id123</string>
    <string name="latin_only">شامل اعداد و حروف لاتین</string>
    <string name="faculty_hint">برای مثال: علوم کامپیوتر</string>
    <string name="category_hint">برای مثال: درسی</string>
    <string name="description_hint">برای مثال: روش پژوهش ترم 1 00–99</string>

    <string name="default_error">خطا</string>

    <string name="create_new_board">ایجاد برد جدید</string>
    <string name="create_board">ایجاد برد</string>
    <string name="delete_board">حذف برد</string>
    <string name="manage_members">مدیریت اعضای برد</string>
    <string name="edit_board_info">ویرایش اطلاعات برد</string>
    <string name="edit_board">ویرایش برد</string>
    <string name="submit_changes">ثبت تغییرات</string>
    <string name="exit_board_question">ااگر خارج شوید، برد ایجاد نخواهد شد.</string>

    <string name="name">نام</string>
    <string name="family_name">نام خانوادگی</string>
    <string name="email">ایمیل</string>
    <string name="user_info">اطلاعات کاربری</string>
    <string name="user_role">نقش کاربر</string>


    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="sure_to_exit">آیا از خروج اطمینان دارید؟</string>

    <string name="search_board_hint">شناسه برد را وارد کنید</string>
    <string name="search_board">جست و جوی برد</string>

    <string name="search_member_hint">جست و جوی کاربران برد</string>
    <string name="add_new_member">+ اضافه کردن کاربر جدید</string>
    <string name="add_new_member_to_board">اضافه کردن عضو جدید</string>
    <string name="remove_user_from_board">حذف کاربر از برد</string>
    <string name="give_writer_access">ارتقا به نویسنده</string>
    <string name="take_writer_access">گرفتن دسترسی نویسنده برد</string>
    <string name="add_as_writer">نویسنده برد</string>
    <string name="submit">ثبت</string>
    <string name="change_password">تغییر رمز عبور</string>
    <string name="old_password">رمز عبور فعلی</string>
    <string name="new_password">رمز عبور جدید</string>
    <string name="new_password_repeat">تکرار رمز عبور جدید</string>

    <string name="old_password_hint">رمز عبور فعلی خود را وارد کنید</string>
    <string name="new_password_hint">رمز عبور جدید را وارد کنید</string>
    <string name="new_password_repeat_hint">رمز عبور جدید را تکرار کنید</string>

    <string name="add_new_user">اضافه کردن کاربر جدید</string>
    <string name="admin">ادمین</string>
    <string name="creator">بانی برد</string>
    <string name="regular_member">کاربر عادی</string>


    <string-array name="navigation_drawer_items_array">
        <item>پروفایل</item>
        <item>تغییر رمز عبور</item>
        <item>خروج</item>
    </string-array>
</resources>