<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <ImageView
            android:id="@+id/loginIv"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginBottom="70dp"
            android:layout_gravity="center"
            android:src="@drawable/resa_logo_transparent"/>

        <TextView
            android:id="@+id/usernameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:textSize="18sp"
            android:fontFamily="@font/iransans"
            android:gravity="right"
            android:textColor="@color/dark_shade3"
            android:text="@string/username" />

        <EditText
            android:id="@+id/usernameEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/username_hint"
            android:inputType="textVisiblePassword|textNoSuggestions" />

        <TextView
            android:id="@+id/passwordTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:textSize="18sp"
            android:fontFamily="@font/iransans"
            android:textColor="@color/dark_shade3"
            android:gravity="right"
            android:text="@string/password" />

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/statusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="12"
            android:fontFamily="@font/iransans"
            android:textColor="@color/error_red"
            android:gravity="start"
            android:visibility="gone"
            android:text="نام کاربری یا رمز عبور اشتباه است." />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:background="@drawable/curved_button"
            android:text="@string/login"
            android:fontFamily="@font/iransans"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>