<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.CreateBoardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/create_board_toolbar"
                layout="@layout/board_toolbar" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/board_id_create"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 1234567890"
                        android:fontFamily="@font/sahelfd"
                        android:hint="@string/board_id_hint"
                        android:inputType="text"
                        android:maxLength="40"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sahelfd"
                        android:text="@string/board_id"
                        android:textColor="@color/grey_dark"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/board_id_problem_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/board_id_problem_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_error"
                        android:textSize="16sp"
                        android:textColor="@color/error_red" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/error_red"
                        android:layout_marginLeft="5dp" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="right"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/board_title_create"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/sahelfd"
                    android:hint="@string/description_hint"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sahelfd"
                    android:text="@string/board_title"
                    android:textColor="@color/grey_dark"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="right"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/board_category_create"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:maxLength="120"
                    android:fontFamily="@font/sahelfd"
                    android:hint="@string/category_hint"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sahelfd"
                    android:text="@string/board_category"
                    android:textColor="@color/grey_dark"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="right"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/board_faculty_create"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/sahelfd"
                    android:maxLength="100"
                    android:hint="@string/faculty_hint"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sahelfd"
                    android:text="@string/board_faculty"
                    android:textColor="@color/grey_dark"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/create_board_status_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/create_board_status_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_error"
                    android:textSize="16sp"
                    android:textColor="@color/error_red" />

                <ImageView
                    android:id="@+id/create_board_status_image"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/error_red"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/sahelfd"
                android:background="@drawable/curved_button_light"
                android:text="@string/create_board" />


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>