<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.ConfigureBoardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/configure_board_toolbar"
                layout="@layout/board_toolbar" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/curved_background_edit_board"
                android:padding="15dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="right"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sahelfd"
                    android:text="@string/edit_board_info"
                    android:textColor="@color/grey_dark"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"
                    android:textSize="16sp"
                    android:layout_marginEnd="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/board_id_edit"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                            android:enabled="false"
                            android:hint="@string/board_id_hint"
                            android:inputType="text"
                            android:maxLength="40"
                            android:textColor="@color/grey_light1"
                            android:textSize="16sp"
                            android:layout_marginEnd="5dp" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sahelfd"
                            android:text="@string/board_id"
                            android:textColor="@color/grey_light1"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/board_title_edit"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:fontFamily="@font/sahelfd"
                            android:hint="@string/description_hint"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:layout_marginEnd="5dp" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sahelfd"
                            android:text="@string/board_title"
                            android:textColor="@color/grey_dark"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/board_title_edit_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="106dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/board_title_edit_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/default_error"
                            android:textColor="@color/error_red"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/error_red" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/board_category_edit"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:fontFamily="@font/sahelfd"
                            android:hint="@string/category_hint"
                            android:maxLength="120"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sahelfd"
                            android:text="@string/board_category"
                            android:textColor="@color/grey_dark"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/board_category_edit_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="106dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/board_category_edit_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/default_error"
                            android:textColor="@color/error_red"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/error_red" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/board_faculty_edit"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:fontFamily="@font/sahelfd"
                        android:hint="@string/faculty_hint"
                        android:maxLength="100"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_marginEnd="5dp" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sahelfd"
                        android:text="@string/board_faculty"
                        android:textColor="@color/grey_dark"
                        android:textSize="16sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/configure_board"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/curved_button_light"
                    android:fontFamily="@font/sahelfd"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="@string/submit_changes" />


                <LinearLayout
                    android:id="@+id/edit_board_status_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/edit_board_status_description"
                        android:layout_width="340dp"
                        android:layout_height="wrap_content"
                        android:text="@string/default_error"
                        android:textColor="@color/error_red"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/edit_board_status_image"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/error_red" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/manage_access_control_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="right"
                android:clickable="true"
                android:padding="15dp"
                android:background="@drawable/curved_background_edit_board"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sahelfd"
                    android:text="@string/manage_members"
                    android:textColor="@color/grey_dark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp" />
            </LinearLayout>

            <Button
                android:id="@+id/delete_board"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/curved_button_red"
                android:fontFamily="@font/sahelfd"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/delete_board" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>